<resources>
    <string name="app_name">网易新闻</string>
    <string name="myself_activity_main">我</string>
    <string name="topics_activity_main">话题</string>
    <string name="seeAndHear_activity_main">视听</string>
    <string name="read_activity_main">阅读</string>
    <string name="news_activity_main">新闻</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">测试</string>
    <string name="special">专题</string>


    <string name="pull_to_refresh">来，可劲的拉~~</string>
    <string name="pull_to_isrefreshing">拼命..获取数据中...</string>
    <string name="pull_to_refreshed">释放吧！</string>

    <string name="up_to_refresh">上拉加载</string>
    <string name="up_to_refreshing">拼命加载中...</string>
    <string name="up_to_refreshed">释放以加载</string>

</resources>
